--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,27 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/home_24px"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_bits"
+        android:icon="@drawable/dashboard_24px"
+        android:title="@string/title_bits" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_cult"
+        android:icon="@drawable/diversity_2_24px"
+        android:title="@string/title_cult" />
+
+    <item
+        android:id="@+id/navigation_fix"
+        android:icon="@drawable/emoji_objects_24px"
+        android:title="@string/title_fix" />
+
+    <item
+        android:id="@+id/navigation_resources"
+        android:icon="@drawable/clinical_notes_24px"
+        android:title="@string/title_resources" />
 
 </menu>
