--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,30 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.example.prashiksha.ui.home.HomeFragment"
-        android:label="@string/title_home"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.prashiksha.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_bits"
+        android:name="com.example.prashiksha.ui.bits.BitsFragment"
+        android:label="@string/title_bits"
+        tools:layout="@layout/fragment_bits" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.prashiksha.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_cult"
+        android:name="com.example.prashiksha.ui.cult.CultFragment"
+        android:label="@string/title_cult"
+        tools:layout="@layout/fragment_cult" />
+
+    <fragment
+        android:id="@+id/navigation_fix"
+        android:name="com.example.prashiksha.ui.fix.FixFragment"
+        android:label="@string/title_fix"
+        tools:layout="@layout/fragment_fix" />
+
+    <fragment
+        android:id="@+id/navigation_resources"
+        android:name="com.example.prashiksha.ui.resources.ResourcesFragment"
+        android:label="@string/title_resources"
+        tools:layout="@layout/fragment_resources" />
 </navigation>
