--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffffff</color>
-    <color name="colorPrimaryVariant">#ffffff</color>
-    <color name="colorOnPrimary">#000000</color>
+    <color name="colorPrimary">#171717</color>
+    <color name="colorPrimaryVariant">#171717</color>
+    <color name="colorOnPrimary">#FFFFFF</color>
     <color name="colorSecondary">#f68712</color>
     <color name="colorSecondaryVariant">#f68712</color>
-    <color name="colorOnSecondary">#000000</color>
-    <color name="logintextcolor">#000000</color>
+    <color name="colorOnSecondary">#FFFFFF</color>
+    <color name="logintextcolor">#FFFFFF</color>
     <color name="login_page_color">#f68712</color>
     <color name="colorstrokebutton1">#e5e1ee</color>
     <color name="colorstrokebutton2">#5c5d5e</color>
