--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,10 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        app:itemIconSize="30dp"
+        app:itemIconSize="24dp"
         android:background="#88000000"
         app:itemIconTint="@color/bottom_navigation_colors"
         app:itemTextAppearanceActive="@style/BottomNavigationView.TextAppearance.Active"
