--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -7,7 +7,8 @@
         android:id="@+id/playerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="83dp" />
 
     <LinearLayout
         android:id="@+id/interactionLayout"
