--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="83dp" />
+        android:layout_marginBottom="60dp">
+    </com.google.android.exoplayer2.ui.PlayerView>
 
     <LinearLayout
         android:id="@+id/interactionLayout"
@@ -16,27 +17,28 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        android:layout_margin="16dp">
+        android:layout_margin="16dp"
+        android:paddingBottom="100dp">
 
         <ImageButton
             android:id="@+id/btnLike"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/like"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/baseline_check_circle_outline_24"
             android:background="?attr/selectableItemBackgroundBorderless" />
 
         <ImageButton
             android:id="@+id/btnComment"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/comment"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/baseline_comment_24"
             android:background="?attr/selectableItemBackgroundBorderless" />
 
         <ImageButton
             android:id="@+id/btnShare"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/share"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/baseline_share_24"
             android:background="?attr/selectableItemBackgroundBorderless" />
     </LinearLayout>
 </RelativeLayout>
