--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="BottomNavigationView.TextAppearance.Active" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:textColor">#f68712</item>
+        <item name="fontFamily">@font/ancillary_bold</item>
+        <item name="android:textSize">12sp</item>
+        <item name="strokeColor">@color/colorPrimary</item>
+        <item name="strokeWidth">2dp</item>
     </style>
 
     <style name="BottomNavigationView.TextAppearance.Inactive" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:textColor">@color/colorOnPrimary</item>
+        <item name="fontFamily">@font/ancillary_bold</item>
+        <item name="android:textSize">12sp</item>
+        <item name="strokeColor">@color/colorPrimary</item>
+        <item name="strokeWidth">2dp</item>
+    </style>
+
+    <style name="MyActionBarTitleText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:fontFamily">@font/harabara</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
