--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,25 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="ButtonLoginStyle" parent="Theme.AppCompat.DayNight">
+        <item name="android:textColor">@color/logintextcolor</item>
+        <item name="android:background">@drawable/gradient_loginbutton</item>
+        <item name="android:font">@font/bifocals</item>
+        <item name="android:strokeColor">#000000</item>
+        <item name="colorControlActivated">@color/login_page_color</item>
+    </style>
+
+
+    <style name="EmailButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/login_page_color</item>
+        <item name="android:textColor">@color/logintextcolor</item>
+
+    </style>
+
+    <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/text_input_layout_stroke_color</item>
+    </style>
+
 </resources>
