--- a/app/src/main/res/layout/activity_interface.xml
+++ b/app/src/main/res/layout/activity_interface.xml
@@ -5,7 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize">
+    android:paddingTop="?attr/actionBarSize"
+    android:theme="@style/Theme.Prashiksha">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -54,24 +55,25 @@
             android:id="@+id/timerTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
             android:text="00:00"
-            android:textSize="18sp"
-            android:layout_marginBottom="16dp"
-            android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/questionTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Question will be here"
-            android:textSize="18sp"
-            android:layout_marginBottom="16dp" />
+            android:textSize="18sp" />
 
         <RadioGroup
             android:id="@+id/optionsRadioGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="40dp">
+
+            <TextView
+                android:id="@+id/questionTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Question will be here"
+                android:textSize="18sp" />
 
             <RadioButton
                 android:id="@+id/option1RadioButton"
@@ -98,12 +100,12 @@
                 android:text="Option 4" />
         </RadioGroup>
 
-        <Button
+        <com.example.prashiksha.CustomButton
             android:id="@+id/nextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Next"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="20dp"
+            android:text="Next" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
